# make_cmake

./: PROJECT_COMPLETE.md  README.md  outline.md  test_cmake_examples.sh  test_examples.sh  test_make_examples.sh
examples/cmake/01-hello-world/: CMakeLists.txt  README.md  hello.c
examples/cmake/02-library/: CMakeLists.txt
examples/cmake/02-library/lib/: mathlib.c  mathlib.h
examples/cmake/02-library/src/: main.c
examples/cmake/03-two-stages/: CMakeLists.txt  README.md  main.c
examples/cmake/04-makefile-analysis/: CMakeLists.txt  README.md  main.c  utils.c
examples/cmake/05-target-properties/: CMakeLists.txt
examples/cmake/05-target-properties/app/: main.c
examples/cmake/05-target-properties/common/: common.h
examples/cmake/05-target-properties/network/: network.c
examples/cmake/05-target-properties/utils/: utils.c
examples/cmake/06-find-package/: CMakeLists.txt  README.md  main.c
examples/cmake/07-multi-directory/: CMakeLists.txt
examples/cmake/07-multi-directory/src/: CMakeLists.txt  main.c
examples/cmake/07-multi-directory/src/core/: core.c
examples/cmake/07-multi-directory/src/utils/: utils.c
examples/cmake/07-multi-directory/tests/: CMakeLists.txt  test_main.c
examples/cmake/08-generator-expressions/: CMakeLists.txt  main.c
examples/cmake/09-custom-commands/: CMakeLists.txt  main.c  version.h.in
examples/cmake/10-packaging/: CMakeLists.txt
examples/cmake/10-packaging/lib/: mylib.c
examples/cmake/10-packaging/src/: main.c
examples/cmake/11-cross-compile/: CMakeLists.txt  main.c
examples/cmake/12-testing/: CMakeLists.txt
examples/cmake/12-testing/src/: math.c
examples/cmake/12-testing/tests/: test_math.c
examples/cmake/13-reusable-library/: CMakeLists.txt
examples/cmake/13-reusable-library/include/: mylib.h
examples/cmake/13-reusable-library/src/: mylib.c
examples/make/01-hello-world/: Makefile  README.md
examples/make/02-variables/: Makefile  README.md  main.c
examples/make/03-single-file/: Makefile  calculator.c
examples/make/04-timestamp-demo/: Makefile  README.md  main.c  utils.c  utils.h
examples/make/05-pattern-rules/: Makefile
examples/make/06-batch-compile/: Makefile
examples/make/06-batch-compile/src/: divide.c  main.c  multiply.c  subtract.c
examples/make/07-conditional-build/: Makefile  README.md
examples/make/07-conditional-build/src/: config.c  config.h  main.c
examples/make/08-phony-targets/: Makefile  README.md
examples/make/08-phony-targets/src/: main.c  utils.c  utils.h
examples/make/09-complete-project/: Makefile  README.md
examples/make/09-complete-project/include/: mylib.h
examples/make/09-complete-project/lib/: mylib.c
examples/make/09-complete-project/src/: main.c
examples/make/10-multi-directory/: Makefile  README.md
examples/make/10-multi-directory/src/: main.c
examples/make/10-multi-directory/src/core/: core.c
examples/make/10-multi-directory/src/utils/: utils.c
examples/make/11-parallel-build/: Makefile  README.md  generate.sh
examples/make/11-parallel-build/src/: file10.c  file11.c  file12.c  file13.c  file14.c  file15.c  file16.c  file17.c  file18.c  file19.c  file2.c  file20.c  file3.c  file4.c  file5.c  file6.c  file7.c  file8.c  file9.c
examples/make/12-debugging/: Makefile  README.md  main.c  utils.c  utils.h
tutorial/: 01-make-basics.md  02-make-advanced.md  03-cmake-basics.md  04-cmake-advanced-part2.md  04-cmake-advanced-part3.md  04-cmake-advanced.md  05-appendix.md
